# python-microservices-template

./: .gitignore  README.md
docs/deployment/: README.md
docs/deployment/guides/: COMPILED_ARTIFACTS.md  DOCKER_DEPLOYMENT.md  DOCKER_INTEGRATION.md
docs/deployment/production-configs/: .dockerignore.production  Dockerfile.production.template  Makefile.production  docker-compose.production.yml  nginx.production.conf  prometheus.yml.example  setup-docker-production.sh
template_api/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
template_api/.github/workflows/: ci.yml  deploy.yml
template_api/config/: celery_config.py  env.py  logger.py  redis_config.py
template_api/controller/: v1Controller.py
template_api/dependencies/: auth.py  health.py  metrics.py  util.py
template_api/exception/: exception_handlers.py
template_api/middleware/: AdvancedRateLimiter.py  CSRFMiddleware.py  CompressionMiddleware.py  RateLimiterMiddleware.py  SecurityHeadersMiddleware.py
template_api/router/: health_router.py  v1Router.py
template_api/schema/: advanced_schemas.py  schemas.py
template_api/tests/: __init__.py  conftest.py  test_auth.py  test_controllers.py  test_middleware.py  test_routers.py
template_consola/: .env.example  Dockerfile  README.md  main.py  main_scheduler.py  requirements.txt  test_procesos.py
template_consola/config/: env.py  logger.py
template_consola/dependencies/: util.py
template_consola/exception/: exception_handlers.py
template_consola/processes/: ejemplo_proceso.py  proceso_a.py  proceso_b.py  proceso_c.py  proceso_continuo.py  proceso_cron.py  proceso_dias_especificos.py  proceso_evento.py  proceso_hora_fija.py  proceso_intervalo.py
template_consola/schema/: schemas.py
template_consola/service/: servicio.py  servicio_scheduler.py
template_repositorio/: .env.example  README.md  model_gen.txt  requirements.txt  schema_generator.py  setup.py
template_repositorio/repositorio_lib/: __init__.py
template_web/: .env.example  Dockerfile  README.md  main.py  requirements.txt
template_web/config/: env.py  logger.py
template_web/controller/: v1Controller.py
template_web/dependencies/: auth.py  util.py
template_web/exception/: exception_handlers.py
template_web/router/: v1Router.py
template_web/schema/: schemas.py
(+43 files in other folders)
